Created home page

--- a/Tai_Portfolio/portfolio/index.html
+++ b/Tai_Portfolio/portfolio/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Gambit - Portfolio / Photography HTML Template</title>
+	<title>Taichen - Portfolio</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="img/favicon.png">
@@ -317,14 +317,14 @@
 	<main>
 
 		<!-- Media Background -->
-		<div class="media-background" data-background="img/gallery/112.jpg" data-overlay="black; .4">
+		<div class="media-background" data-background="img/gallery/hero.jpg" data-overlay="black; .4">
 
 			<!-- Caption Text -->
 			<div class="media-background-caption">
-				<h1 data-animation="fade-in-bottom 1.2s">Hello, I'm Gambit</h1>
+				<h1 data-animation="fade-in-bottom 1.2s">Hello, I'm Tai</h1>
 				<h3 class="lead font-os" data-animation="fade-in-bottom .7s .5s">
-					<span>Front-end Developer from Norway <br> I'm</span>
-					<span class="text-light" data-typed="React lover; Traveler; Enthusiast"></span>
+					<span><!--And I'm a Developer <br> -->I'm a</span>
+					<span class="text-light" data-typed="Web Developer; Traveler; Cloud Practitioner; Full Stack Developer"></span>
 				</h3>
 			</div>
 			<!-- /Caption Text -->
