Updated my experience and contact information

--- a/Tai_Portfolio/portfolio/index.html
+++ b/Tai_Portfolio/portfolio/index.html
@@ -8,6 +8,7 @@
 	<link rel="icon" href="img/favicon.png">
 	<link rel="stylesheet" href="css/core.css">
 	<link rel="stylesheet" href="css/theme.css">
+	<link rel="stylesheet" href="css/add.css">
 </head>
 <body>
 
@@ -28,8 +29,7 @@
 			<ul>
 				<li><a href="#home" class="home-link is-active">Home</a></li>
 				<li><a href="#about" class="aside-link">About</a></li>
-				<li><a href="#timeline" class="aside-link">timeline</a></li>
-				<li><a href="#services" class="aside-link">Services</a></li>
+				<li><a href="#timeline" class="aside-link">Work Experience</a></li>
 				<li><a href="#contact" class="aside-link">Contact</a></li>
 				<li>
 					<a href="#">Pages</a>
@@ -88,7 +88,7 @@
 				<h1 class="capitalize mb-5">About Me<br></h1>
 
 				<div class="row pt-5">
-					<div class="col-md">
+					<div class="col-md centerAll">
 						<img src="img/portfolioPic.png" alt="">
 					</div>
 					<div class="col-md">
@@ -102,107 +102,34 @@
 			<!-- Timeline -->
 			<section id="timeline">
 
-				<h1>Timeline</h1>
+				<h1>Work Experience</h1>
 				<p class="separator-left mb-6"></p>
 
 				<div class="timeline">
 					<div class="timeline-item">
-						<div class="item-date">14 July, 2019</div>
-						<h5>voluptatum perspiciatis libero nam laudantium</h5>
+						<div class="item-date">September 2020 - December 2020</div>
+						<h5>Software Developer Intern | Nooksack Salmon Enhancement Association (NSEA)</h5>
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, possimus? Unde aperiam excepturi, sequi incidunt nesciunt, impedit repudiandae, architecto sit!</p>
 					</div>
 					<div class="timeline-item">
-						<div class="item-date">14 July, 2019</div>
-						<h5>voluptatum perspiciatis libero nam laudantium</h5>
+						<div class="item-date">June 2020 - November 2020</div>
+						<h5>Professional Services Consultant Intern - Cloud Infrastructure Architect | Amazon Web Services (AWS)</h5>
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, possimus? Unde aperiam excepturi, sequi incidunt nesciunt, impedit repudiandae, architecto sit!</p>
 					</div>
 					<div class="timeline-item">
-						<div class="item-date">14 July, 2019</div>
-						<h5>voluptatum perspiciatis libero nam laudantium</h5>
+						<div class="item-date">August 2019 - September 2020</div>
+						<h5>Student Tutor | Varsity Tutors</h5>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, possimus? Unde aperiam excepturi, sequi incidunt nesciunt, impedit repudiandae, architecto sit!</p>
+					</div>
+					<div class="timeline-item">
+						<div class="item-date">June 2019 - August 2020</div>
+						<h5>Prouction & Operations Manager | Herbal Face Food</h5>
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, possimus? Unde aperiam excepturi, sequi incidunt nesciunt, impedit repudiandae, architecto sit!</p>
 					</div>
 				</div>
 
 			</section>
 			<!-- /Timeline -->
-	
-			<!-- Services -->
-			<section id="services">
-
-				<h1>Services</h1>
-				<p class="separator-left mb-6"></p>
-
-				<div class="row">
-					<div class="col-md">
-
-						<div class="service-item">
-							<img src="img/gallery/3.jpg" alt="">
-							<div class="service-item-details">
-								<h6>Branding</h6>
-								<ul>
-									<li><span>Voluptatum odit</span></li>
-									<li><span>Consectetur adipisicing</span></li>
-									<li><span>Porro dolore</span></li>
-								</ul>
-							</div>
-						</div>
-
-					</div>
-					<div class="col-md">
-
-						<div class="service-item">
-							<img src="img/gallery/107.jpg" alt="">
-							<div class="service-item-details">
-								<h6>Photography</h6>
-								<ul>
-									<li><span>Voluptatum odit</span></li>
-									<li><span>Consectetur adipisicing</span></li>
-									<li><span>Porro dolore</span></li>
-								</ul>
-							</div>
-						</div>
-
-					</div>
-				</div>
-			</section>
-			<!-- /Services -->
-	
-			<!-- Clients -->
-			<section id="clients">
-				<div class="swiper" data-slides-per-view="4" data-slides-mobile="3" data-autoplay="2700">
-					<div class="swiper-slide">
-						<img src="img/clients/1.png" alt="">
-					</div>
-					<div class="swiper-slide">
-						<img src="img/clients/2.png" alt="">
-					</div>
-					<div class="swiper-slide">
-						<img src="img/clients/3.png" alt="">
-					</div>
-					<div class="swiper-slide">
-						<img src="img/clients/4.png" alt="">
-					</div>
-					<div class="swiper-slide">
-						<img src="img/clients/5.png" alt="">
-					</div>
-					<div class="swiper-slide">
-						<img src="img/clients/6.png" alt="">
-					</div>
-					<div class="swiper-slide">
-						<img src="img/clients/7.png" alt="">
-					</div>
-					<div class="swiper-slide">
-						<img src="img/clients/8.png" alt="">
-					</div>
-					<div class="swiper-slide">
-						<img src="img/clients/9.png" alt="">
-					</div>
-					<div class="swiper-slide">
-						<img src="img/clients/10.png" alt="">
-					</div>
-				</div>
-			</section>
-			<!-- /Clients -->
 	
 			<!-- Contact -->
 			<section id="contact">
@@ -221,21 +148,21 @@
 						<div class="contact-detail-box">
 							<i class="fa fa-phone"></i>
 							<div>
-								<p>+123 456 789 987</p>
+								<p>+1 360 320 3219</p>
 							</div>
 						</div>
 	
 						<div class="contact-detail-box">
 							<i class="fa fa-map-marker"></i>
 							<div>
-								<p>BASED IN NEW YORK, USA</p>
+								<p>BASED IN WASHINGTON, USA</p>
 							</div>
 						</div>
 	
 						<div class="contact-detail-box">
 							<i class="fa fa-envelope-o"></i>
 							<div>
-								<p>mailme @ example.com</p>
+								<p>Mail Me @ taichen.rose0@gmail.com</p>
 							</div>
 						</div>
 	
@@ -243,10 +170,10 @@
 
 						<!-- Social Links -->
 						<div class="social-links">
-							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-instagram"></i></a>
-							<a href="#"><i class="fa fa-linkedin"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
+							<!-- <a href="#"><i class="fa fa-facebook"></i></a> -->
+							<!-- <a href="#"><i class="fa fa-instagram"></i></a> -->
+							<a href="https://www.linkedin.com/in/taichen-rose-1191b1187/"><i class="fa fa-linkedin"></i></a>
+							<a href="https://github.com/willsower"><i class="fa fa-github"></i></a>
 						</div>
 
 					</div>
@@ -263,7 +190,7 @@
 	
 				</div>
 	
-				<h1 class="mt-8">Say Hello</h1>
+				<h1 class="mt-8">Say Hello!</h1>
 				<p class="separator-left mt-2 mb-6"></p>
 
 				<!-- contact form -->
@@ -291,7 +218,7 @@
 				<!-- copyright -->
 				<div class="">
 					<p class="separator-left mt-8"></p>
-					<small>&copy; AchtungThemes 2019</small>
+					<small>&copy; Taichen Rose 2020</small>
 				</div>
 				
 			</section>
