Got portfolio idea

--- a/Tai_Portfolio/portfolio/index.html
+++ b/Tai_Portfolio/portfolio/index.html
@@ -180,13 +180,13 @@
 					<!-- /contact details -->
 	
 					<!-- google map -->
-					<div class="google-map" 
+					<!-- <div class="google-map" 
 						 data-api-key="" 
 						 data-latitude="40.7323333" 
 						 data-longitude="-74.0054748" 
 						 data-zoom="13" 
 						 data-marker="img/map-marker.png">
-					</div>
+					</div> -->
 	
 				</div>
 	
