Updated nav bar

--- a/Tai_Portfolio/portfolio/index.html
+++ b/Tai_Portfolio/portfolio/index.html
@@ -32,36 +32,12 @@
 				<li><a href="#timeline" class="aside-link">Work Experience</a></li>
 				<li><a href="#contact" class="aside-link">Contact</a></li>
 				<li>
-					<a href="#">Pages</a>
+					<a href="#">Project Work</a>
 					<ul>
-						<li><a href="portfolio-single.html">portfolio single</a></li>
-						<li><a href="portfolio-single-2.html">portfolio single 2</a></li>
-						<li><a href="stories.html">stories</a></li>
-						<li><a href="stories-single.html">stories single</a></li>
-					</ul>
-				</li>
-				<li>
-					<a href="#">Demos</a>
-					<ul>
-						<li><a href="index-slideshow.html">slideshow</a></li>
-						<li><a href="index-classic-portfolio.html">classic portfolio</a></li>
-						<li><a href="index-portfolio-carousel.html">portfolio carousel</a></li>
-						<li><a href="index-horizontal-scrollbar.html">horizontal scrollbar</a></li>
-						<li><a href="index-horizontal-filtered.html">horizontal filtered</a></li>
-						<li><a href="index-image-background.html">image background</a></li>
-						<li><a href="index-video-background.html">video background</a></li>
-						<li><a href="index-split-slider.html">split slider</a></li>
-						<li><a href="index-portfolio-3d.html">3D portfolio</a></li>
-						<li><a href="index-portfolio-title.html">portfolio title</a></li>
-						<li><a href="index-thumbnail-gallery.html">thumbnail gallery</a></li>
-						<li><a href="index-horizontal-albums.html">horizontal albums</a></li>
-						<li><a href="index-justified-filtered.html">justified filtered</a></li>
-						<li><a href="index-portfolio-hero.html">portfolio hero</a></li>
-						<li><a href="index-spaced-gallery.html">spaced gallery</a></li>
-						<li><a href="index-fullscreen-justified.html">fullscreen justified</a></li>
-						<li><a href="index-horizontal-gallery.html">horizontal gallery</a></li>
-						<li><a href="index-fullscreen-carousel.html">fullscreen carousel</a></li>
-						<li><a href="index-fullscreen-masonry.html">fullscreen masonry</a></li>
+						<li><a href="project1.html">Deadwood Board Game</a></li>
+						<li><a href="project2.html">Tex2Speech</a></li>
+						<li><a href="project3.html">Pre-Onboarding Skill - Alexa Hackathon</a></li>
+						<li><a href="project4.html">Bookstore Project</a></li>
 					</ul>
 				</li>
 			</ul>
