--- a/Tai_Portfolio/portfolio/project1.html
+++ b/Tai_Portfolio/portfolio/project1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Gambit - Portfolio / Photography HTML Template</title>
+	<title>Taichen - Portfolio</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="img/favicon.png">
