Getting projects up and running

--- a/Tai_Portfolio/portfolio/index.html
+++ b/Tai_Portfolio/portfolio/index.html
@@ -19,9 +19,10 @@
 	<header id="header" class="header-transparent">
 
 		<!-- Logo -->
-		<a href="/" class="logo">
-			<img src="img/logo-dark.png" class="logo-dark" alt="">
-			<img src="img/logo-light.png" class="logo-light" alt="">
+		<a href="index.html" class="logo">
+			<!-- <img src="img/logo-dark.png" class="logo-dark" alt="">
+			<img src="img/logo-light.png" class="logo-light" alt=""> -->
+			TAICHEN ROSE
 		</a>
 
 		<!-- Navigation -->
@@ -38,6 +39,7 @@
 						<li><a href="project2.html">Tex2Speech</a></li>
 						<li><a href="project3.html">Pre-Onboarding Skill - Alexa Hackathon</a></li>
 						<li><a href="project4.html">Bookstore Project</a></li>
+						<li><a href="project5.html">Interactive Map Project</a></li>
 					</ul>
 				</li>
 			</ul>
@@ -215,7 +217,7 @@
 				<h1 data-animation="fade-in-bottom 1.2s">Hello, I'm Tai!</h1>
 				<h3 class="lead font-os" data-animation="fade-in-bottom .7s .5s">
 					<span><!--And I'm a Developer <br> -->I'm a</span>
-					<span class="text-light" data-typed="Web Developer; Traveler; Cloud Practitioner; Full Stack Developer"></span>
+					<span class="text-light" data-typed="Web Developer; Traveler; Cloud Infrastructure Architect; Full Stack Developer"></span>
 				</h3>
 			</div>
 			<!-- /Caption Text -->
