--- a/Tai_Portfolio/portfolio/project4.html
+++ b/Tai_Portfolio/portfolio/project4.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Taichen - Deadwood Project</title>
+	<title>Taichen - Bookstore Project</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="img/favicon.png">
@@ -50,8 +50,8 @@
 			<!-- about -->
 			<div class="row">
 				<div class="col-md-6" data-animation="fade-in-bottom 1s .1s">
-					<h1 class="uppercase">Deadwood Board Game</h1>
-					<p class="serif">2 Person Team</p>
+					<h1 class="uppercase">Bookstore Project</h1>
+					<p class="serif">Individual Project</p>
 					<p class="separator-left"></p>
 				</div>
 				<div class="col-md-6" data-animation="fade-in-bottom 1s .2s">
@@ -88,7 +88,7 @@
 				<div class="col-md-3" data-animation="fade-in-bottom 1s .5s">
 					<h6 class="uppercase mt-7 mb-4">Live</h6>
 					<p>
-						<a href="https://github.com/willsower/DeadwoodProject" class="text-link">See Project Repository</a>
+						<a href="#" class="text-link">See Website</a>
 					</p>
 				</div>
 
@@ -168,7 +168,7 @@
 		<div class="page-nav">
 			<h6>See Next</h6>
 			<h1>
-				<a href="project2.html">Tex2Speech</a>
+				<a href="project5.html">Interactive Map Project</a>
 			</h1>
 		</div>
 		<!-- /Page Navigation -->
