Got my logo going

--- a/Tai_Portfolio/portfolio/project5.html
+++ b/Tai_Portfolio/portfolio/project5.html
@@ -20,8 +20,7 @@
 
 		<!-- Logo -->
 		<a href="#" class="logo">
-			<img src="img/logo-dark.png" class="logo-dark" alt="">
-			<img src="img/logo-light.png" class="logo-light" alt="">
+            TAICHEN ROSE
 		</a>
 
 		<!-- Navigation -->
@@ -74,7 +73,7 @@
 
 				<div class="col-md-3" data-animation="fade-in-bottom 1s .3s">
 					<h6 class="uppercase mt-7 mb-4">Date</h6>
-					<p>25/03/2019</p>
+					<p>September 2020 - December 2020</p>
 				</div>
 
 				<div class="col-md-3" data-animation="fade-in-bottom 1s .4s">
