Doing deadwood project information

--- a/Tai_Portfolio/portfolio/project1.html
+++ b/Tai_Portfolio/portfolio/project1.html
@@ -19,7 +19,7 @@
 	<header id="header">
 
 		<!-- Logo -->
-		<a href="#" class="logo">
+		<a href="index.html" class="logo">
 			TAICHEN ROSE
 		</a>
 
@@ -54,11 +54,8 @@
 					<p class="separator-left"></p>
 				</div>
 				<div class="col-md-6" data-animation="fade-in-bottom 1s .2s">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque quae, totam mollitia sequi vero eum
-						facilis harum rerum nobis, cum ut quaerat reprehenderit numquam quos, minus perspiciatis
-						perferendis. Enim, perferendis.</p>
-					<p>Ea aspernatur debitis rerum repellat, optio corporis laborum. Enim ducimus, temporibus minus facilis.
-						Quae ratione voluptatem porro voluptas tenetur vel.</p>
+					<p>This game is a 2D replication of Deadwood by Cheapass games. My team member Daria and I started with the design phase, then created a text based implementation of the game, then finally added in the GUI using JavaFX.</p>
+					<p>For the design and organizational phase, we used UML Diagrams, Use Cases, and Sequence diagrams to organize our codebase. Then, we started implementing the text based version using Java, and created an XML parser to read XML files containing card information. Finally, we used JavaFX and CSS to create our final GUI product using the MVC framework, and other Object Oriented Programming concepts.</p>
 				</div>
 			</div>
 			<!-- /about -->
@@ -67,8 +64,8 @@
 			<div class="row mt-4">
 
 				<div class="col-md-3" data-animation="fade-in-bottom 1s .2s">
-					<h6 class="uppercase mt-7 mb-4">Client</h6>
-					<p>Mercedes-Benz</p>
+					<h6 class="uppercase mt-7 mb-4">Team Members</h6>
+					<p>Daria Miller and Taichen Rose</p>
 				</div>
 
 				<div class="col-md-3" data-animation="fade-in-bottom 1s .3s">
@@ -77,10 +74,9 @@
 				</div>
 
 				<div class="col-md-3" data-animation="fade-in-bottom 1s .4s">
-					<h6 class="uppercase mt-7 mb-4">Services</h6>
+					<h6 class="uppercase mt-7 mb-4">Languages & Tools Used</h6>
 					<p>
-						<a href="#services" class="text-link aside-link">Web Design</a> /
-						<a href="#services" class="text-link aside-link">Illustration</a>
+						Java / JavaFX / MVC Framework / Object-Oriented-Concepts / Design Patterns
 					</p>
 				</div>
 
@@ -105,10 +101,8 @@
 				<!-- Project Text -->
 				<div class="row">
 					<div class="offset-md-2 col-md-8 text-light pt-6 pt-md-10">
-						<h2>Adipisci expedita quo harum voluptatum aperiam animi</h2>
-						<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-							Quia tenetur quibusdam libero? Modi repellendus perferendis commodi qui repudiandae vel porro
-							aperiam animi, maiores error eius expedita asperiores sed quibusdam quos!</p>
+						<h2>Video of Deadwood Gameplay</h2>
+						<p>In this video, you will see __ amount of players. They will act, rehearse, move around the board, and upgrade. There is error checking, and the only actions that a player can perform will display. At the end of the game, a list of players who won will print out along with the overall score of each player. Ties are takin in account aswell.</p>
 					</div>
 				</div>
 
