--- a/Tai_Portfolio/portfolio/project4.html
+++ b/Tai_Portfolio/portfolio/project4.html
@@ -19,7 +19,7 @@
 	<header id="header">
 
 		<!-- Logo -->
-		<a href="#" class="logo">
+		<a href="index.html" class="logo">
 			TAICHEN ROSE
 		</a>
 
